--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "prettier": "prettier --write '{src,test,docs}/**/*.{ts,yml,yaml,json,md}'"
+    "prettier": "prettier --write '{src,test,docs}/**/*.{ts,yml,yaml,json,md}'",
+    "linter": "tslint --project . -c tslint.json"
   },
   "repository": {
     "type": "git",
@@ -34,7 +35,9 @@
     "@types/jest": "^24.0.0",
     "jest": "^24.1.0",
     "prettier": "1.16.4",
-    "ts-jest": "^23.10.5"
+    "ts-jest": "^23.10.5",
+    "tslint": "^5.12.1",
+    "tslint-config-airbnb": "^5.11.1"
   },
   "jest": {
     "collectCoverageFrom": [
