--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,14 @@ jobs:
       # specify the version you desire here
       - image: circleci/node:10.0
 
+
+    working_directory: ~/repo
+
     steps:
+
+      - attach_workspace:
+          at: ~/repo
+
       - checkout
 
       - run:
@@ -33,5 +40,6 @@ jobs:
       # run tests!
       - run: npm run test
 
-      - codecov/upload:
-          file: {{ coverage_report_filepath }}
+      - run:
+          name: Submit coverage report to Coveralls.io
+          command: yarn coveralls
